// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Dashboard Grid dashboard, custom layout 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        Passes a custom layout to the dashboard grid. Only the lg and md breakpoint have a custom layout defined. Resize the screen to see the cards reposition and resize themselves at different layouts.
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
              style={
                Object {
                  "height": "448px",
                }
              }
            >
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 cynIXT"
                content="My Facility Metrics"
                id="facility"
                style={
                  Object {
                    "MozTransform": "translate(332px,160px)",
                    "OTransform": "translate(332px,160px)",
                    "WebkitTransform": "translate(332px,160px)",
                    "height": "272px",
                    "msTransform": "translate(332px,160px)",
                    "position": "absolute",
                    "transform": "translate(332px,160px)",
                    "width": "300px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-facility"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-facility"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Facility Metrics
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-facility"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 jALRne"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 fbzdtE"
                content="My Humidity Values"
                id="humidity"
                style={
                  Object {
                    "MozTransform": "translate(16px,16px)",
                    "OTransform": "translate(16px,16px)",
                    "WebkitTransform": "translate(16px,16px)",
                    "height": "128px",
                    "msTransform": "translate(16px,16px)",
                    "position": "absolute",
                    "transform": "translate(16px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-humidity"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-humidity"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Humidity
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-humidity"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 fCsOPw"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 fbzdtE"
                content="My utilization chart"
                id="utilization"
                style={
                  Object {
                    "MozTransform": "translate(253px,16px)",
                    "OTransform": "translate(253px,16px)",
                    "WebkitTransform": "translate(253px,16px)",
                    "height": "128px",
                    "msTransform": "translate(253px,16px)",
                    "position": "absolute",
                    "transform": "translate(253px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-utilization"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-utilization"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Utilization
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-utilization"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 fCsOPw"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Dashboard Grid dashboard, default layouts 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        Resize your window to see the callback handlers get triggered in the Actions tab.
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
              style={
                Object {
                  "height": "304px",
                }
              }
            >
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 cynIXT"
                content="My Facility Metrics"
                id="facility"
                style={
                  Object {
                    "MozTransform": "translate(16px,16px)",
                    "OTransform": "translate(16px,16px)",
                    "WebkitTransform": "translate(16px,16px)",
                    "height": "272px",
                    "msTransform": "translate(16px,16px)",
                    "position": "absolute",
                    "transform": "translate(16px,16px)",
                    "width": "300px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-facility"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-facility"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Facility Metrics
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-facility"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 jALRne"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 fbzdtE"
                content="My Humidity Values"
                id="humidity"
                style={
                  Object {
                    "MozTransform": "translate(332px,16px)",
                    "OTransform": "translate(332px,16px)",
                    "WebkitTransform": "translate(332px,16px)",
                    "height": "128px",
                    "msTransform": "translate(332px,16px)",
                    "position": "absolute",
                    "transform": "translate(332px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-humidity"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-humidity"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Humidity
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-humidity"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 fCsOPw"
                />
              </div>
              <div
                className="react-grid-item cssTransforms Card__CardWrapper-v5r71h-0 fbzdtE"
                content="My utilization chart"
                id="utilization"
                style={
                  Object {
                    "MozTransform": "translate(490px,16px)",
                    "OTransform": "translate(490px,16px)",
                    "WebkitTransform": "translate(490px,16px)",
                    "height": "128px",
                    "msTransform": "translate(490px,16px)",
                    "position": "absolute",
                    "transform": "translate(490px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-utilization"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-utilization"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Utilization
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-utilization"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 fCsOPw"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Dashboard Grid dashboard, is Edtiable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        You can drag and drop the cards around. Watch the handler get triggered on the Actions tab.
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <div
              className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 fKgkDF"
              style={
                Object {
                  "height": "304px",
                }
              }
            >
              <div
                className="react-grid-item react-draggable cssTransforms Card__CardWrapper-v5r71h-0 cynIXT"
                content="My Facility Metrics"
                id="facility"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate(16px,16px)",
                    "OTransform": "translate(16px,16px)",
                    "WebkitTransform": "translate(16px,16px)",
                    "height": "272px",
                    "msTransform": "translate(16px,16px)",
                    "position": "absolute",
                    "touchAction": "none",
                    "transform": "translate(16px,16px)",
                    "width": "300px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-facility"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-facility"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Facility Metrics
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-facility"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 jALRne"
                />
              </div>
              <div
                className="react-grid-item react-draggable cssTransforms Card__CardWrapper-v5r71h-0 fbzdtE"
                content="My Humidity Values"
                id="humidity"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate(332px,16px)",
                    "OTransform": "translate(332px,16px)",
                    "WebkitTransform": "translate(332px,16px)",
                    "height": "128px",
                    "msTransform": "translate(332px,16px)",
                    "position": "absolute",
                    "touchAction": "none",
                    "transform": "translate(332px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-humidity"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-humidity"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Humidity
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-humidity"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 fCsOPw"
                />
              </div>
              <div
                className="react-grid-item react-draggable cssTransforms Card__CardWrapper-v5r71h-0 fbzdtE"
                content="My utilization chart"
                id="utilization"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate(490px,16px)",
                    "OTransform": "translate(490px,16px)",
                    "WebkitTransform": "translate(490px,16px)",
                    "height": "128px",
                    "msTransform": "translate(490px,16px)",
                    "position": "absolute",
                    "touchAction": "none",
                    "transform": "translate(490px,16px)",
                    "width": "142px",
                  }
                }
                type="VALUE"
              >
                <div
                  className="card--header"
                >
                  <span
                    className="card--title"
                  >
                    <div
                      aria-describedby={null}
                      aria-haspopup="true"
                      aria-labelledby="card-tooltip-trigger-utilization"
                      className="bx--tooltip__label card--title-label"
                      id="card-tooltip-trigger-utilization"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="card--title-wrapper Card__CardTitleWrapper-v5r71h-1 GLYDM"
                      >
                        Utilization
                      </div>
                    </div>
                    <div
                      className="bx--tooltip__label"
                      id="card-tooltip-trigger-utilization"
                    >
                      
                      <div
                        aria-describedby={null}
                        aria-haspopup="true"
                        className="bx--tooltip__trigger"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          aria-hidden={true}
                          description={null}
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          role={null}
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11V6.5h-2v1h1V11H6v1h4v-1zM8 3.5c-.4 0-.8.3-.8.8s.4.7.8.7.8-.3.8-.8-.4-.7-.8-.7z"
                          />
                          <path
                            d="M8 15c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zM8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    className="card--toolbar"
                  />
                </div>
                <div
                  className="Card__CardContent-v5r71h-2 fCsOPw"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;
